--- a/src/app/pie/pie.component.css
+++ b/src/app/pie/pie.component.css
@@ -5,5 +5,37 @@
   width: 100%;
   height: 100%;
 }
-::ng-deep svg {
+.legends-container {
+  width: 100%;
+  height: 100%;
+  min-height: 2rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex: 1 1 auto;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.legends-container > .legend {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: flex-start;
+  align-items: center;
+  max-width: 45%;
+  margin-bottom: 0.2rem;
+}
+.legend > .swatch {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 1px solid #e6e6e6;
+}
+.legend > .text {
+  font-size: 14px;
+  color: rgb(85, 85, 85);
+  margin-right: 0.5rem;
 }
