--- a/src/app/pie/pie.component.html
+++ b/src/app/pie/pie.component.html
@@ -2,8 +2,12 @@
   <svg id="pie"></svg>
   <div class="legends-container">
     <div class="legend" *ngFor="let item of dataset; index as i">
-      <div class="swatch" [style]="'background:' + palette[i]"></div>
-      <div class="text">{{ item.name }}</div>
+      <div
+        class="swatch"
+        [id]="'label' + i"
+        [style]="'background:' + palette[i]"
+      ></div>
+      <div [id]="'labelText' + i" class="text">{{ item.name }}</div>
     </div>
   </div>
 </div>
