--- a/src/app/pie/pie.component.css
+++ b/src/app/pie/pie.component.css
@@ -40,6 +40,7 @@
   height: 16px;
   border-radius: 50%;
   border: 1px solid #e6e6e6;
+  padding-right: 10px;
 }
 .legend > .text {
   font-size: 1rem;
